Update Тестирование ПО Статическое и динамическое тестирование.md

--- a/Тестирование ПО Статическое и динамическое тестирование.md
+++ b/Тестирование ПО Статическое и динамическое тестирование.md
@@ -1,6 +1,6 @@
 Техники тестирования
-•	Статистическое – статический анализ, «обзорный прогресс»
-•	Динамическое – белый ящик, чёрный ящик.
+Статистическое – статический анализ, «обзорный прогресс»
+Динамическое – белый ящик, чёрный ящик.
 
 Также к статическому тестированию относят тестирование требований, спецификаций, документации.
 
