Update Тестирование ПО Статическое и динамическое тестирование.md

--- a/Тестирование ПО Статическое и динамическое тестирование.md
+++ b/Тестирование ПО Статическое и динамическое тестирование.md
@@ -1,6 +1,6 @@
 Техники тестирования
-Статистическое – статический анализ, «обзорный прогресс»
-Динамическое – белый ящик, чёрный ящик.
+1) Статистическое – статический анализ, «обзорный прогресс»
+2) Динамическое – белый ящик, чёрный ящик.
 
 Также к статическому тестированию относят тестирование требований, спецификаций, документации.
 
@@ -14,53 +14,52 @@
 Процесс совместного анализа является процессом оценки состояний и, при необходимости, результатов работ по проекту.
 Процесс аудита является процессом определения соответствия требованиям, планам и условиям договора.
 Дефект- выявленное в процессе тестирования несоответствие полученных и определенных результатов.
-Квалификация видов тестирования.
+**Квалификация видов тестирования.**
 По объекту тестирования (functional testing)
 
+***Нагрузочное тестирование:***
+1) Тест. производительности
+2) Тест. стабильности
+3) Тест. удобства использования
+4) Тест. интерфейса пользователя
+5) Тест. безопасности
+6) Тест. локализации
+7) Тест. совместимости 
 
-Нагрузочное тестирование:
-•	Тест. Производительности
-•	Тест. Стабильности
-•	Тест. Удобства использования
-•	Тест. Интерфейса пользователя
-•	Тест. Безопасности
-•	Тест. Локализации
-•	Тест. Совместимости 
-
-Функциональное тестирование:
+***Функциональное тестирование:***
 По знанию системы:
-•	Тест чёрного ящика
-•	Тест белого ящика
-•	Тест серого ящика
+1) Тест чёрного ящика
+2) Тест белого ящика
+3) Тест серого ящика
 
-По степени автоматизации:
-•	Ручные тест.
-•	Автоматизированные тест.
-•	Полу-автоматизированные тест.
+***По степени автоматизации:***
+1) Ручные тест
+2) Автоматизированные тест.
+3) Полу-автоматизированные тест.
 
-По степени изолированности компонентов:
-•	Модульные
-•	Интеграционное
-•	Системное
+***По степени изолированности компонентов:***
+1) Модульные
+2) Интеграционное
+3) Системное
 
-По времени проведения тестирования:
+***По времени проведения тестирования:***
 Альфа тестирование:
-•	Тест. При приёмке 
-•	Тест. Новых функций
-•	Регрессионное тест.
-•	Тест при сдаче
+1) Тест. При приёмке 
+2) Тест. Новых функци
+3) Регрессионное тест.
+4) Тест при сдаче
 
-Бета тестирование:
+***Бета тестирование:***
 По признаку позитивности сценариев
 По степени подготовленности к тестированию:
-•	Тест по документации
-•	Эд Хак
+1) Тест по документации
+2) Эд Хак
 
 Рабочие артефакты тестировщика
-Планы тестирования:
-•	Что будет тестироваться (тест. Требования, тест. Варианты)
-•	Какими методами и несколько подробно будет тест. Система 
-•	Клон-график работ и требуемые ресурсы
+***Планы тестирования:***
+1) Что будет тестироваться (тест. Требования, тест. Варианты)
+2) Какими методами и несколько подробно будет тест. Система 
+3) Клон-график работ и требуемые ресурсы
 
 Сценарий тестирования 
 Тест скрипт
