Update Тестирование ПО Статическое и динамическое тестирование.md

--- a/Тестирование ПО Статическое и динамическое тестирование.md
+++ b/Тестирование ПО Статическое и динамическое тестирование.md
@@ -1,6 +1,6 @@
 Техники тестирования
-1) Статистическое – статический анализ, «обзорный прогресс»
-2) Динамическое – белый ящик, чёрный ящик.
+1) **Статистическое** – статический анализ, «обзорный прогресс»
+2) **Динамическое** – белый ящик, чёрный ящик.
 
 Также к статическому тестированию относят тестирование требований, спецификаций, документации.
 
@@ -14,7 +14,7 @@
 ИС. Аттестация должна гарантировать полное соответствие спецификациям, требованиям и документации. Аттестацию выполняют путём тестирования во всех возможных ситуациях и используют при это независимых специалистов.
 Процесс совместного анализа является процессом оценки состояний и, при необходимости, результатов работ по проекту.
 Процесс аудита является процессом определения соответствия требованиям, планам и условиям договора.
-Дефект- выявленное в процессе тестирования несоответствие полученных и определенных результатов.
+**Дефект**- выявленное в процессе тестирования несоответствие полученных и определенных результатов.
 **Квалификация видов тестирования.**
 
 По объекту тестирования (functional testing)
