--- a/Тестирование веб-приложений.md
+++ b/Тестирование веб-приложений.md
@@ -1,48 +1,50 @@
 ![image](https://github.com/gosleeptoday/konspekt/assets/62100314/ce64317a-1702-4ea5-be37-4190194ab35b)
----
-**Требования** – это подробное изложение функционального наполнения системы.
 
+**Требования** – это подробное изложение функционального наполнения системы.
+---
 Требования должны быть независимы от внутренней архитектуры приложения, то есть должны описывать то, что необходимо заказчику без деталей реализации.
 
-Основными требованиями являются требования к продукту
+Основными требованиями являются требования к продукту.
 
-Тестирование документации и требований
+<ins>Тестирование документации и требований</ins>
+
 Требование к продукту и процессу.
+
 Проводится разграничение соответствующих требований как свойств продукта, который необходимо получить, и процесса, с помощью которого продукт будет издаваться. Отметим, что ряд требований может быть заложен неявно и программные требования могут порождать требования к процессу.
 Критерии тестирования требований:
-•	Полнота
-•	Однозначность 
-•	Непротиворечивость
-•	Проверяемость/тестируемость
+1)	Полнота
+2)	Однозначность
+3)	Непротиворечивость
+4)	Проверяемость/тестируемость
 
 Виды документации, подвергаемой тестированию 
-•	Проектная документация (project documentation)
-•	Требования к программному продукту Функциональные спецификации к программному продукту
-•	Архитектура и дизайн
-•	План проекта и тестовый план
-•	Тестовые случаи и сценарии
+1) Проектная документация (project documentation)
+2) Требования к программному продукту Функциональные спецификации к программному продукту
+3) Архитектура и дизай
+4) План проекта и тестовый план
+5) Тестовые случаи и сценарии
 
 Сопроводительная документация
-•	Интерактивная помощь
-•	Руководство по установке к использованию программного продукта
+1) Интерактивная помощь
+2) Руководство по установке к использованию программного продукта
 
 Уровни требований:
-•	Бизнес требования
-•	Требования пользователей
-•	Функциональный
+1) Бизнес требования
+2) Требования пользователей
+3) Функциональный
 
 Типы требований:
-•	Функциональные
-•	Нефункциональные
-•	Системные
+1) Функциональные
+2) Нефункциональные
+3) Системные
 
 Нефункциональные требования
 Свойства:
-•	Производительность
-•	Зависимость от платформы
-•	Расширяемость
-•	Надёжность и так далее
+1) Производительность
+2) Зависимость от платформы
+3) Расширяемость
+4) Надёжность и так далее
 
-Требования по производительности – это скорость, пропускная способность, время отличия, используемая память. Многие требования, связанные с производимостью должны быть описаны в конкретных вариантах используемых, а не в разделе относящийся ко всей системе. 
+**Требования по производительности** – это скорость, пропускная способность, время отличия, используемая память. Многие требования, связанные с производимостью должны быть описаны в конкретных вариантах используемых, а не в разделе относящийся ко всей системе. 
 
 Часто нефункциональные требования не могут быть привязаны к конкретному варианту используемые и должны быть вычислены в отдельный список дополнительных требований к системе.
