Update Понятие отладки ПО.md

--- a/Понятие отладки ПО.md
+++ b/Понятие отладки ПО.md
@@ -10,13 +10,12 @@
 2) Ошибки компоновки, обнаруженные компоновщиком при объединении модулей программы.
 3) Ошибки вычисления, обнаруженные ОС, аппаратными средствами или пользователями при выполнении программы.
 
-<ins>Ошибки вычисления:</ins>
-Ошибки определения данных
-Логические ошибки – Кодирование, проектирование
-Ошибки наполнении потребностей 
+Ошибки вычисления:
+* Ошибки определения данных
+* Логические ошибки – Кодирование, проектирование
+* Ошибки наполнении потребностей 
 
-Методы отладки программы
-Отладка программы – один из самых сложных этапов разработки ПО.
+**Отладка программы** – один из самых сложных этапов разработки ПО.
 
 Обдумывание и логическое осмысление всей информации ошибок.
 
