Update Понятие отладки ПО.md

--- a/Понятие отладки ПО.md
+++ b/Понятие отладки ПО.md
@@ -11,16 +11,16 @@
 3) Ошибки вычисления, обнаруженные ОС, аппаратными средствами или пользователями при выполнении программы.
 
 Ошибки вычисления:
-* Ошибки определения данных
-* Логические ошибки – Кодирование, проектирование
-* Ошибки наполнении потребностей 
+1) Ошибки определения данных
+2) Логические ошибки – Кодирование, проектирование
+3) Ошибки наполнении потребностей 
 
 **Отладка программы** – один из самых сложных этапов разработки ПО.
 
 Обдумывание и логическое осмысление всей информации ошибок.
 
 Методы:
-•	Ручного тестирования
-•	Индукция
-•	Дедукция
-•	Обратного прослеживания
+1) Ручного тестирования
+2) Индукция
+3) Дедукция
+4) Обратного прослеживания
